--- a/imgui.ini
+++ b/imgui.ini
@@ -206,14 +206,14 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
     DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
     DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,49 HiddenTabBar=1 Selected=0xE4AF3456
   DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1311 Split=Y
-    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,963 Split=X
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,999 Split=X
       DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=323,982 Selected=0xD2CD21AB
-          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2235,982 Split=X Selected=0xF3E10FF5
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1588,882 CentralNode=1 Selected=0xF3E10FF5
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=645,882 Selected=0xEDB0D437
+          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=277,982 Selected=0xD2CD21AB
+          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2281,982 Split=X Selected=0xF3E10FF5
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1776,882 CentralNode=1 Selected=0xF3E10FF5
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=503,882 Selected=0x1F3F22F7
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,346 Selected=0x98A88EA8
+    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,310 Selected=0x98A88EA8
 
