PlayerSword コンポーネントを追加してのテスト前保存

--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="Source\Game\enemy_slime_component.h" />
     <ClInclude Include="Source\Game\enemy_soldier_component.h" />
     <ClInclude Include="Source\Game\player_component.h" />
+    <ClInclude Include="Source\Game\player_sword_component.h" />
     <ClInclude Include="Source\Game\sound_resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -328,6 +329,7 @@
     <ClCompile Include="Source\Game\enemy_slime_component.cpp" />
     <ClCompile Include="Source\Game\enemy_soldier_component.cpp" />
     <ClCompile Include="Source\Game\player_component.cpp" />
+    <ClCompile Include="Source\Game\player_sword_component.cpp" />
     <ClCompile Include="Source\Game\sound_resource.cpp" />
   </ItemGroup>
   <ItemGroup>
