--- a/imgui.ini
+++ b/imgui.ini
@@ -212,8 +212,8 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
           DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=277,982 Selected=0xD2CD21AB
           DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2281,982 Split=X Selected=0xF3E10FF5
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1698,882 CentralNode=1 Selected=0xF3E10FF5
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=581,882 Selected=0x1F3F22F7
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1698,882 CentralNode=1 Selected=0xE92E08E1
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=581,882 Selected=0xEDB0D437
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,332 Selected=0x98A88EA8
 
