--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="Source\Engine\input_manager.h" />
     <ClInclude Include="Source\Engine\input_system.h" />
     <ClInclude Include="Source\Engine\inspector.h" />
+    <ClInclude Include="Source\Engine\keyframe_event.h" />
     <ClInclude Include="Source\Engine\light.h" />
     <ClInclude Include="Source\Engine\loader.h" />
     <ClInclude Include="Source\Engine\local_shader_manager.h" />
@@ -249,6 +250,7 @@
     <ClCompile Include="Source\Engine\input_manager.cpp" />
     <ClCompile Include="Source\Engine\input_system.cpp" />
     <ClCompile Include="Source\Engine\inspector.cpp" />
+    <ClCompile Include="Source\Engine\keyframe_event.cpp" />
     <ClCompile Include="Source\Engine\light.cpp" />
     <ClCompile Include="Source\Engine\local_shader_manager.cpp" />
     <ClCompile Include="Source\Engine\Logger.cpp" />
