--- a/imgui.ini
+++ b/imgui.ini
@@ -64,7 +64,7 @@ DockId=0x00000007,1
 Pos=13,34
 Size=10,32
 Collapsed=0
-DockId=0x0000000C,2
+DockId=0x00000005,2
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -114,7 +114,7 @@ DockId=0x00000005,1
 
 [Window][ Hierarchy]
 Pos=0,34
-Size=15,32
+Size=11,32
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -131,10 +131,10 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Scene]
-Pos=17,34
-Size=6,32
+Pos=13,34
+Size=10,32
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000C,0
 
 [Window][Size Text]
 Pos=25,34
@@ -158,13 +158,13 @@ DockId=0x0000000E,1
 Pos=13,34
 Size=10,32
 Collapsed=0
-DockId=0x0000000C,1
+DockId=0x00000005,1
 
 [Window][Game]
-Pos=17,34
-Size=6,32
+Pos=13,34
+Size=10,32
 Collapsed=0
-DockId=0x0000000D,1
+DockId=0x0000000C,1
 
 [Window][Rename]
 Pos=910,1141
@@ -206,14 +206,14 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
     DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,49 HiddenTabBar=1 Selected=0x1C39D6E4
     DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0xE4AF3456
   DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1311 Split=Y
-    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,977 Split=X
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,909 Split=X
       DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=277,982 Selected=0xD2CD21AB
-          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2281,982 Split=X Selected=0xF3E10FF5
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1698,882 CentralNode=1 Selected=0xF3E10FF5
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=581,882 Selected=0x1F3F22F7
+          DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1924,882 Split=X Selected=0xF3E10FF5
+            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=340,977 Selected=0xD2CD21AB
+            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1582,977 CentralNode=1 Selected=0xF3E10FF5
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=634,882 Selected=0x1F3F22F7
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,332 Selected=0x98A88EA8
+    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,400 Selected=0x98A88EA8
 
