--- a/imgui.ini
+++ b/imgui.ini
@@ -213,7 +213,7 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
           DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1916,882 Split=X Selected=0xF3E10FF5
             DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=340,977 Selected=0xD2CD21AB
             DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1574,977 CentralNode=1 Selected=0xF3E10FF5
-          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=642,882 Selected=0x1F3F22F7
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=642,882 Selected=0xEDB0D437
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,400 Selected=0x98A88EA8
 
